# longbridge-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LAUNCHGUIDE.md  README.md  build.rs  chatgpt-app-submission.json  glama.json  rust_out  scopes.json  server.json  skills-lock.json  tools.json
.claude/: settings.json
.claude/skills/: longbridge-ah-premium  longbridge-alert  longbridge-anomaly  longbridge-calendar  longbridge-capital-flow  longbridge-catalyst-radar  longbridge-constituent  longbridge-corporate  longbridge-dca  longbridge-depth  longbridge-derivatives  longbridge-earnings  longbridge-flows  longbridge-fundamental  longbridge-fx  longbridge-kline  longbridge-market-temp  longbridge-news  longbridge-orders  longbridge-peer-comparison  longbridge-portfolio  longbridge-positions  longbridge-quote  longbridge-security-list  longbridge-statement  longbridge-subscriptions  longbridge-valuation  longbridge-watchlist  longbridge-watchlist-admin
data/: scopes.json  tools_app_id.json
docs/: architecture.md  awesome-finance-opensource.md  index.html
scripts/: check_registries.py  glama-start.sh
src/: counter.rs  main.rs  metrics.rs  prompts.rs  registry.rs  serialize.rs  ws_pool.rs
src/auth/: admin.rs  (+6 more)
tests/: CLI_MCP_DIFF.html  CLI_MCP_DIFF.md  FULL_TEST_20260421.html  FULL_TEST_20260421.md  MCP_VS_CLI_PARAM_AUDIT.md  OAUTH_RFC7591_FEEDBACK.md  PUBLISHING.md  TEST_REPORT.html  TEST_REPORT.md  TOOLS.md  awesome-finance-opensource.html  bench_cpu.py  build_full_html.py  check-urls.json  mcp_client.py  old_scopes.json  test_tools_full.py  watch-sponsors.json
(+48 files in other folders)
